--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 IPython==8.4.0
-numpy==1.23.1
-numba==0.55pip in.2
+numpy==1.23.1git
+numba==0.55
+python-speech-features
+scipy
+librosa
+miniaudio
+
+
 
 
